# sdl2Template

./: CMakeLists.txt  main.cpp
